432672  vg_regtest: test-specific environment variables not reset between tests
432809  VEX should support REX.W + POPF
432861  PPC modsw and modsd give incorrect results for 1 mod 12
432215  Add debuginfod functionality
433323  Use pkglibexecdir as vglibdir
433500  DRD regtest faulures when libstdc++ and libgcc debuginfo are installed
433629  valgrind/README has type "abd" instead of "and"
n-i-bz  helgrind: If hg_cli__realloc fails, return NULL.


Release 3.16.1 (22 June 2020)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

3.16.1 fixes two critical bugs discovered after 3.16.0 was frozen.  It also
fixes character encoding problems in the documentation HTML.

422677  PPC sync instruction L field should only be 2 bits in ISA 3.0
422715  32-bit x86: vex: the `impossible' happened: expr_is_guardable: unhandled expr

(3.16.1, 22 June 2020, 36d6727e1d768333a536f274491e5879cab2c2f7)



Release 3.16.0 (27 May 2020)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

3.16.0 is a feature release with many improvements and the usual collection of
bug fixes.

This release supports X86/Linux, AMD64/Linux, ARM32/Linux, ARM64/Linux,
PPC32/Linux, PPC64BE/Linux, PPC64LE/Linux, S390X/Linux, MIPS32/Linux,
MIPS64/Linux, ARM/Android, ARM64/Android, MIPS32/Android, X86/Android,
X86/Solaris, AMD64/Solaris and AMD64/MacOSX 10.12.  There is also preliminary
support for X86/macOS 10.13, AMD64/macOS 10.13 and nanoMIPS/Linux.

* ==================== CORE CHANGES ===================

* It is now possible to dynamically change the value of many command line
  options while your program (or its children) are running under Valgrind.

  To see the list of dynamically changeable options, run
     "valgrind --help-dyn-options".

  You can change the options from the shell by using vgdb to launch
  the monitor command "v.clo <clo option>...".
  The same monitor command can be used from a gdb connected
  to the valgrind gdbserver.
  Your program can also change the dynamically changeable options using