@@ -141,6 +141,7 @@ where XXXXXX is the bug number as listed below.
 433323  Use pkglibexecdir as vglibdir
 433500  DRD regtest faulures when libstdc++ and libgcc debuginfo are installed
 433629  valgrind/README has type "abd" instead of "and"
+433641  Rust std::sys::unix::fs::try_statx Syscall param fstatat(file_name)
 n-i-bz  helgrind: If hg_cli__realloc fails, return NULL.
 
 
